--- a/symfony-rest-api/config/packages/api_platform.yaml
+++ b/symfony-rest-api/config/packages/api_platform.yaml
@@ -8,3 +8,6 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    collection:
+        pagination:
+            items_per_page: 15
