--- a/symfony-rest-api/config/packages/security.yaml
+++ b/symfony-rest-api/config/packages/security.yaml
@@ -1,15 +1,29 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\Adherent:
+            algorithm: bcrypt
     providers:
-        users_in_memory: { memory: null }
+        in_database:
+            entity:
+                class: App\Entity\Adherent
+                property: mail
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        api:
+            pattern: ^/apiPlatform
+            stateless: true
             anonymous: true
-            lazy: true
-            provider: users_in_memory
+            json_login:
+                username_path: mail
+                check_path: /apiPlatform/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            guard:
+                authenticators: 
+                - lexik_jwt_authentication.jwt_token_authenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -20,5 +34,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/apiPlatform/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/apiPlatform, roles: IS_AUTHENTICATED_FULLY }
