--- a/symfony-rest-api/config/packages/security.yaml
+++ b/symfony-rest-api/config/packages/security.yaml
@@ -8,10 +8,12 @@ security:
             entity:
                 class: App\Entity\Adherent
                 property: mail
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+            
         api:
             pattern: ^/apiPlatform
             stateless: true
@@ -25,14 +27,12 @@ security:
                 authenticators: 
                 - lexik_jwt_authentication.jwt_token_authenticator
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/apiPlatform/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/apiPlatform, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/apiPlatform/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/apiPlatform$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/apiPlatform, roles: IS_AUTHENTICATED_FULLY }
+
+    role_hierarchy:
+        ROLE_MANAGER: ROLE_ADHERENT
+        ROLE_ADMIN:   ROLE_MANAGER
+ 
