--- a/symfony-rest-api/composer.json
+++ b/symfony-rest-api/composer.json
@@ -5,14 +5,14 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.1",
-        "doctrine/annotations": "^1.10",
-        "doctrine/doctrine-bundle": "^1.6 || ^2.0",
+        "api-platform/core": "^2.5",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.4.5",
+        "doctrine/orm": "^2.7",
         "lexik/jwt-authentication-bundle": "^2.8",
-        "nelmio/cors-bundle": "^1.5 || ^2.0",
-        "phpdocumentor/reflection-docblock": "^3.0 || ^4.0 || ^5.0",
+        "nelmio/cors-bundle": "^2.1",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
@@ -21,7 +21,10 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
